--- a/index.html
+++ b/index.html
@@ -1,10 +1,9 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <meta http-equiv="refresh" content="0; url=tugasakhir.html">
+  <title>LEARNINGHTML-CSS</title>
 </head>
 <body>
-  <p><a href="tugasakhir.html"></a></p>
   <p><a href="tugasakhir.html"></a></p>
 </body>
 </html>
