--- a/index.html
+++ b/index.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>LEARNINGHTML-CSS</title>
+  <meta http-equiv="refresh" content="0; url=tugasakhir.html">
 </head>
 <body>
+  <p><a href="tugasakhir.html"></a></p>
   <p><a href="tugasakhir.html"></a></p>
 </body>
 </html>
